--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.7",
+    "react-select-virtualized": "^5.5.1",
+    "react-virtualized-select": "^3.1.3",
+    "react-window": "^1.8.9",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
